Fix flexbox layout bug and radio button form

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    min-width: 320px;
 }
 
 header {
@@ -38,6 +39,7 @@ header {
     display: flex;
     font-size: 18px;
     flex: 1 1 auto;
+    min-height: 0;
 }
 
 #StartPage,
@@ -56,7 +58,8 @@ header {
     height: auto;
 }
 
-#game {
+#game,
+#EndPage {
     /* add scrollbar within container if overflows
        auto works for Firefox and overlay works for Safari/Chrome */
     overflow-y: auto;
